--- a/2.03-Exercise-ConfigureTheJavaPlugin/build.gradle
+++ b/2.03-Exercise-ConfigureTheJavaPlugin/build.gradle
@@ -26,3 +26,19 @@ User Guide chapter regarding the Java plugin.
 https://docs.gradle.org/current/userguide/java_plugin.html#sec:source_sets
 
 */
+apply plugin: 'java'
+
+sourceSets {
+    main {
+        java {
+            srcDir 'java' // 3. Add 'java' directory as a source directory
+        }
+    }
+}
+
+version = '1.0'
+jar {
+    manifest {
+        attributes 'Implementation-Version': version
+    }
+}
