--- a/2.09-Exercise-AddDependenciesToCustomConfiguration/build.gradle
+++ b/2.09-Exercise-AddDependenciesToCustomConfiguration/build.gradle
@@ -28,3 +28,20 @@ apply plugin: 'java'
 repositories {
     mavenCentral()
 }
+
+configurations {
+	deps
+	compile.extendsFrom deps
+}
+
+dependencies {
+	deps 'com.google.guava:guava:24.1-jre'
+}
+
+task zipDeps(type: Zip) {
+	baseName 'dependencyArchive'
+	classifier 'deps'
+
+	from configurations.deps
+
+}
