--- a/3.07-Exercise-DeclareFlavors/app/build.gradle
+++ b/3.07-Exercise-DeclareFlavors/app/build.gradle
@@ -38,6 +38,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    productFlavors{
+        paid {
+            applicationId 'com.udacity.gradle.buildflavors.paid'
+        }
+
+        free {
+            applicationId 'com.udacity.gradle.buildflavors.free'
+        }
+    }
 }
 
 /*
