--- a/3.08-Exercise-AddAFlavor-SpecificActivity/app/build.gradle
+++ b/3.08-Exercise-AddAFlavor-SpecificActivity/app/build.gradle
@@ -42,9 +42,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    productFlavors {
+        paid {
+            applicationId 'com.udacity.gradle.flavorspecificactivity.paid'
+        }
+
+        free {
+            applicationId 'com.udacity.gradle.flavorspecificactivity.free'
+        }
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support.constraint:constraint-layout:1.1.0'
+    compile 'com.android.support:support-v4:24.2.1'
 }
